2004-04-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/SkipToWindow.cs:

	Play after seek.

2004-04-10  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	R data/glade/GroupsWindow.glade:
	* data/glade/Makefile.am:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Some cleanups, put info menuitem back again ..

2004-04-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Correct error message.

2004-04-09  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-04-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Sort by album year after artist. Inspired by a patch from teemu.

2004-04-09  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (cell_data_func),
	(pointer_list_view_get_contents),
	(pointer_list_get_handle_from_path):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/CoverImage.cs:
	* src/HandleView.cs:

	Add album cover DnD in the "Play album" window.

2004-04-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.5.3.99.

2004-04-09  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Released 0.5.3.

2004-04-06  Andras Timar  <timar@gnome.hu>

	* configure.in: Added hu to ALL_LINGUAS.

2004-04-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Stop ProcessActionsFromThread at the right time.

2004-04-05  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Up xine version requirement to 1.0.0rc3b.

2004-04-04  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.5.2.99.

2004-04-04  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Song.cs:

	Even better album cover matching. 

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Released 0.5.2.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c:
